# opengl-course-mipt

./: CMakeLists.txt  fragment.frag  fragment.shader  main.cpp  map.cpp  map.hpp  quad.cpp  quad.hpp  shader.cpp  shader.frag  shader.hpp  texture.cpp  texture.hpp  vertex.shader  vertex.vert
data/shaders/: shader.frag  shader.vert
shaders/: shader.frag  shader.vert
